Fixed the gap between the project cards so there is a gap and does not overlap when hover animation is active.

--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@ section {
     margin-left: auto;
     margin-right: auto;
     width: 50vw;
+    margin-bottom: 35px;
 }
 
 .project-card:hover {
